# aimrt_template

./: .gitignore  README.md  change_workspace.sh  channel.yaml  protocols.yaml
HelloWorld/: CMakeLists.txt  app_start.sh  pkg_start.sh  setup.sh
HelloWorld/cmake/: GetAimRT.cmake
HelloWorld/src/: CMakeLists.txt
HelloWorld/src/app/helloworld_app/: CMakeLists.txt  main.cc
HelloWorld/src/install/linux/cfg/: helloworld_pkg.yaml
HelloWorld/src/module/helloworld_module/: CMakeLists.txt  helloworld_module.cc  helloworld_module.h
HelloWorld/src/pkg/helloworld_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/: CMakeLists.txt  build.sh  compile.sh  setup.sh
WorkSpaceExample/src/: CMakeLists.txt  README.md
WorkSpaceExample/src/channel/: CMakeLists.txt  README.md
WorkSpaceExample/src/channel/module/pb_publisher_module/: CMakeLists.txt  pb_publisher_module.cc  pb_publisher_module.h
WorkSpaceExample/src/channel/module/pb_subscriber_module/: pb_subscriber_module.cc  pb_subscriber_module.h
WorkSpaceExample/src/channel/module/ros2_publisher_module/: CMakeLists.txt  ros2_publisher_module.cc  ros2_publisher_module.h
WorkSpaceExample/src/channel/module/ros2_subscriber_module/: CMakeLists.txt  ros2_subscriber_module.cc  ros2_subscriber_module.h
WorkSpaceExample/src/channel/pkg/pb_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/channel/pkg/publisher_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/channel/pkg/ros2_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/channel/pkg/subscriber_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/: CMakeLists.txt  README.md
WorkSpaceExample/src/chn_protocols/module/chn_publisher_module/: CMakeLists.txt  chn_publisher_module.cc  chn_publisher_module.h
WorkSpaceExample/src/chn_protocols/module/chn_subscriber_module/: CMakeLists.txt  chn_subscriber_module.cc  chn_subscriber_module.h
WorkSpaceExample/src/chn_protocols/module/pb_pub_module/: pb_pub_module.cc  pb_pub_module.h
WorkSpaceExample/src/chn_protocols/module/pb_sub_module/: pb_sub_module.cc  pb_sub_module.h
WorkSpaceExample/src/chn_protocols/module/ros2_pub_module/: CMakeLists.txt  ros2_pub_module.cc  ros2_pub_module.h
WorkSpaceExample/src/chn_protocols/module/ros2_sub_module/: ros2_sub_module.cc  ros2_sub_module.h
WorkSpaceExample/src/chn_protocols/pkg/chn_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/chn_pub_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/chn_sub_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/pb_col_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/pub_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/ros2_col_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/chn_protocols/pkg/sub_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/executor/: CMakeLists.txt  README.md
WorkSpaceExample/src/executor/install/linux/: start_executor_co_pkg.sh  start_executor_pkg.sh  start_executor_time_pkg.sh
WorkSpaceExample/src/executor/install/linux/cfg/: executor_co_pkg.yaml  executor_pkg.yaml  executor_time_pkg.yaml
WorkSpaceExample/src/executor/module/executor_co_module/: CMakeLists.txt  executor_co_module.cc  executor_co_module.h
WorkSpaceExample/src/executor/module/executor_module/: CMakeLists.txt  executor_module.cc  executor_module.h
WorkSpaceExample/src/executor/module/executor_time_module/: executor_time_module.cc  executor_time_module.h
WorkSpaceExample/src/executor/pkg/executor_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/helloworld/: CMakeLists.txt  README.md
WorkSpaceExample/src/helloworld/app/helloworld_app/: CMakeLists.txt  main.cc
WorkSpaceExample/src/helloworld/install/linux/: start_helloworld_app.sh  start_helloworld_pkg.sh
WorkSpaceExample/src/helloworld/install/linux/cfg/: helloworld_app.yaml
WorkSpaceExample/src/helloworld/module/helloworld_module/: CMakeLists.txt  helloworld_module.cc  helloworld_module.h
WorkSpaceExample/src/helloworld/pkg/helloworld_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/parameter/: CMakeLists.txt  README.md
WorkSpaceExample/src/parameter/install/linux/: start_parameter_pkg.sh
WorkSpaceExample/src/parameter/install/linux/cfg/: parameter_pkg.yaml
WorkSpaceExample/src/parameter/module/parameter_module/: parameter_module.cc  parameter_module.h
WorkSpaceExample/src/parameter/pkg/parameter_pkg/: CMakeLists.txt  pkg_main.cc
WorkSpaceExample/src/protocols/: CMakeLists.txt  README.md
WorkSpaceExample/src/protocols/pb/test/: CMakeLists.txt  info.proto  info_rpc.proto
WorkSpaceExample/src/protocols/ros2/test_msgs/: CMakeLists.txt  package.xml
WorkSpaceExample/src/rpc/: CMakeLists.txt  README.md
WorkSpaceExample/src/rpc/module/pb_client_module/: CMakeLists.txt  pb_client_module.cc  pb_client_module.cc.bak  pb_client_module.h  pb_client_module.h.bak
WorkSpaceExample/src/rpc/module/pb_server_module/: CMakeLists.txt  pb_server_module.cc  pb_server_module.cc.bak  pb_server_module.h  pb_server_module.h.bak  service.cc  service.h
WorkSpaceExample/src/rpc/module/ros2_client_module/: CMakeLists.txt  ros2_client_module.cc  ros2_client_module.cc.bak  ros2_client_module.h  ros2_client_module.h.bak
WorkSpaceExample/src/rpc/module/ros2_server_module/: CMakeLists.txt  ros2_server_module.cc  ros2_server_module.cc.bak  ros2_server_module.h  ros2_server_module.h.bak  service.cc  service.h
WorkSpaceExample/src/rpc/pkg/rpc_client_pkg/: CMakeLists.txt  pkg_main.cc  pkg_main.cc.bak
WorkSpaceExample/src/rpc/pkg/rpc_pb_pkg/: CMakeLists.txt  pkg_main.cc  pkg_main.cc.bak
WorkSpaceExample/src/rpc/pkg/rpc_ros2_pkg/: CMakeLists.txt  pkg_main.cc  pkg_main.cc.bak
WorkSpaceExample/src/rpc/pkg/rpc_server_pkg/: CMakeLists.txt  pkg_main.cc  pkg_main.cc.bak
WorkSpaceExample/tools/: config_template.yaml
